@startuml
skinparam linetype ortho
skinparam backgroundColor #1E1E1E
skinparam defaultTextAlignment center
skinparam ArrowColor #B0C4DE
skinparam shadowing false
skinparam FontColor #FFFFFF
skinparam classFontColor #FFFFFF
skinparam classAttributeFontColor #FFFFFF
skinparam classMethodFontColor #FFFFFF

skinparam class {
  BackgroundColor #2D2D2D
  BorderColor #8A8A8A
  FontColor #E0E0E0
}

!include CustomerRepositoryV1.puml
!include PasswordEncoder.puml
!include CreateCustomerRequestBodyToCustomerMapper.puml
!include UpdateCustomerDetailsRequestBodyToCustomerMapper.puml

interface CustomerServiceV1 {
    + void createCustomer(CreateCustomerRequestBody requestBody)
    + Customer getCustomer(String username)
    + Page<Customer> findCustomer(String username, Pageable pageable)
    + void updateCustomerDetails(String username, UpdateCustomerDetailsRequestBody requestBody)
    + void updateCustomerPassword(String username, UpdateCustomerPasswordRequestBody requestBody)
    + void updateCustomerImage(String username, MultipartFile image)
    + void restoreDefaultImage(String username)
    + void deleteCustomer(String username)
}

class DefaultCustomerServiceV1 implements CustomerServiceV1 {
    - CustomerRepositoryV1 repository
    - PasswordEncoder passwordEncoder
    - CreateCustomerRequestBodyToCustomerMapper createRequestBodyMapper
    - UpdateCustomerDetailsRequestBodyToCustomerMapper updateRequestBodyMapper
    - ClassPathResource classPathResource

    + void createCustomer(CreateCustomerRequestBody requestBody)
    + Customer getCustomer(String username)
    + Page<Customer> getCustomer(String username)
    + Page<Customer> findCustomer(String query, Pageable pageable)
    + void updateCustomerDetails(String username, UpdateCustomerDetailsRequestBody requestBody)
    + void updateCustomerPassword(String username, UpdateCustomerPasswordRequestBody requestBody)
    + void updateCustomerImage(String username, MultipartFile image)
    + void restoreDefaultImage(String username)
    + void deleteCustomer(String username)
}

DefaultCustomerServiceV1 --> CustomerRepositoryV1
DefaultCustomerServiceV1 --> PasswordEncoder
DefaultCustomerServiceV1 --> CreateCustomerRequestBodyToCustomerMapper
DefaultCustomerServiceV1 --> UpdateCustomerDetailsRequestBodyToCustomerMapper
DefaultCustomerServiceV1 --> ClassPathResource
@enduml